# llm-tracer

./: .env.example  .gitignore  readme.md
.github/workflows/: dashboard-tests.yml  deployment-tests.yml  tests.yml
client/: Justfile  README.md  pyproject.toml
client/llm_tracer/: __init__.py  client.py
client/tests/: test_client.py
dashboard/: .dockerignore  .env.example  .gitignore  Dockerfile  Justfile  README.md  developer_guide.md  pyproject.toml  rxconfig.py
dashboard/dashboard/: api.py  dashboard.py  state.py
dashboard/dashboard/components/: json_viewer.py  span_gantt.py  span_tree.py  stats_cards.py  trace_detail.py  trace_list.py
dashboard/tests/: conftest.py  test_api.py  test_state.py
examples/: pyproject.toml
infrastructure/: basic_deployment_test.py  developer_guide.md  justfile
infrastructure/bootstrap/: main.tf
infrastructure/environments/dev/: backend.hcl.example  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
infrastructure/environments/prod/: backend.hcl.example  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
infrastructure/modules/dynamodb/: main.tf  outputs.tf  variables.tf
infrastructure/modules/lambda/: main.tf  outputs.tf  variables.tf
infrastructure/modules/monitoring/: main.tf  outputs.tf  variables.tf
service/: .dockerignore  Dockerfile  Justfile  Justfile.example  docker-compose.yml  lambda_handler.py  pyproject.toml
service/docs/: developer_guide.md
service/scripts/: build_lambda_package.sh  create_dynamodb_tables.py  dynamodb_schemas.py
service/src/: auth.py  models.py  rate_limit.py  server.py  storage_dynamodb.py
service/tests/: conftest.py
service/tests/deployment/: conftest.py  test_deployment.py
service/tests/integration/: test_api_endpoints.py  test_complete_workflow.py
service/tests/unit/: test_auth.py  test_models.py  test_rate_limit.py  test_storage_dynamodb.py
