[project]
name = "service"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.4",
    "botocore>=1.42.4",
    "fastapi>=0.121.3",
    "mangum>=0.19.0",
    "pydantic>=2.12.4",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "moto>=5.1.18",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]
